--- a/product.html
+++ b/product.html
@@ -29,16 +29,8 @@
         100%{background-color: yellow; width: 100%;} 
         110%{display: none}
     }
-
     h3{
         font-family: 'Teko', sans-serif;
-        
-    }
-
-    #name{
-        font-family: 'Teko', sans-serif;
-        font-size: 32px;
-        font-weight: bold;
     }
 
     #description{
@@ -56,11 +48,11 @@
 
   <div class="header">
       <div class="row">
-          <div class="col-md-2 tac menuitem"><img src="https://cdn.worldvectorlogo.com/logos/bn.svg" alt="Logo" width="50px" height="50px"></div>
+          <div class="col-md-2 tac menuitem">LOGO</div>
           <div class="col-md-2 tac"></div>
           <div class="col-md-2 tac menuitem"><a href="index.html">MAIN</a></div>
-          <div class="col-md-2 tac menuitem"><a href="aboutus.html">ABOUT US</a></div>
-          <div class="col-md-2 tac menuitem"><a href="products.html">PRODUCTS</a></div>
+          <div class="col-md-2 tac menuitem">ABOUT US</div>
+          <div class="col-md-2 tac menuitem"><a href="product.html">PRODUCTS</a></div>
           <div class="col-md-2 tac menuitem"><a href="login.html">LOGIN</a></div>
       </div>
   </div>
