--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="col-md-2 tac menuitem"><img src="https://cdn.worldvectorlogo.com/logos/bn.svg" alt="Logo" width="50px" height="50px"></div>
             <div class="col-md-2 tac"></div>
             <div class="col-md-2 tac menuitem"><a href="index.html">MAIN</a></div>
-            <div class="col-md-2 tac menuitem"><a href="aboutus.html">ABOUT US</a></div>
-            <div class="col-md-2 tac menuitem"><a href="products.html">PRODUCTS</a></div>
+            <div class="col-md-2 tac menuitem">ABOUT US</div>
+            <div class="col-md-2 tac menuitem"><a href="product.html">PRODUCTS</a></div>
             <div class="col-md-2 tac menuitem"><a href="login.html">LOGIN</a></div>
         </div>
     </div>
